Add two train methods

--- a/AI Component/Train_Method_1.ipynb
+++ b/AI Component/Train_Method_1.ipynb
@@ -303,7 +303,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 284/422 [07:15<03:38,  1.58s/it]"
+      "100%|██████████| 422/422 [11:02<00:00,  1.57s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  8:10 ]\tloss=0.209,         acc=12480/13500=0.924\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [11:43<00:00,  1.67s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  9:10 ]\tloss=0.203,         acc=12499/13500=0.926\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -330,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model, '../saved_models/model_A_1.pt')"
+    "torch.save(model, './saved_models/model_A_1.pt')"
    ]
   }
  ],
