--- a/AI Component/Train_Method_2.ipynb
+++ b/AI Component/Train_Method_2.ipynb
@@ -419,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model, '../saved_models/model_B_2.pt')\n"
+    "torch.save(model, './saved_models/model_B_2.pt')\n"
    ]
   }
  ],
