Add evaluation on test dataset

--- a/AI Component/Predict_Method_1.ipynb
+++ b/AI Component/Predict_Method_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "from core.ai.dataset import get_loader\n",
     "import albumentations as A\n",
-    "train_transform = A.Compose([\n",
+    "eval_transform = A.Compose([\n",
     "    A.Resize(224, 224)\n",
     "])\n",
-    "data_loader = get_loader(images, labels, vit_feature_extractor, train_transform,\n",
+    "data_loader = get_loader(images, labels, vit_feature_extractor, eval_transform,\n",
     "                         pre_trained_model=vit_model, device=device, shuffle=False)"
    ]
   },
@@ -121,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In sample accuracy score: 0.980\n",
-      "In sample f1 score: 0.980\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import metrics\n",
     "# Get accuracy\n",
@@ -171,10 +162,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "SEED = 20\n",
+    "np.random.seed(SEED)\n",
+    "data_df = pd.read_csv(dataset_path + '/data.csv')\n",
+    "test_dataset = data_df.groupby('label').sample(frac=.2).query('image != \"51101.png\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_dataset\n",
+    "other_index = test_dataset.query('label_name not in @label2id.keys()').index\n",
+    "test_dataset.loc[other_index, 'label_name'] = 'other'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = [f'{img_path}/{image}' for image in test_dataset.image]\n",
+    "labels = test_dataset.label_name.apply(lambda x: label2id[x]).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_data_loader = get_loader(images, labels, vit_feature_extractor, eval_transform,\n",
+    "                         pre_trained_model=vit_model, device=device, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 375/375 [09:30<00:00,  1.52s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get out sample dataset predictions\n",
+    "model.eval()\n",
+    "predictions = []\n",
+    "for batch_images, batch_labels in tqdm(eval_data_loader):\n",
+    "    logits = model(batch_images.to(device))\n",
+    "    predictions += logits.argmax(1).cpu().tolist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In sample accuracy score: 0.8002\n",
+      "In sample f1 score: 0.8002\n",
+      "In sample weighted accuracy score: 0.6888\n",
+      "In sample weighted f1 score: 0.6888\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get accuracy\n",
+    "accuracy_score = metrics.accuracy_score(labels, predictions)\n",
+    "print(f'In sample accuracy score: {accuracy_score:.4f}')\n",
+    "\n",
+    "# Get f1 score\n",
+    "f1_score = metrics.f1_score(labels, predictions, average='micro')\n",
+    "print(f'In sample f1 score: {f1_score:.4f}')\n",
+    "\n",
+    "# Get weighted accuracy\n",
+    "sample_weight = [5 if label==label2id['other'] else 1 for label in labels]\n",
+    "weighted_accuracy_score = metrics.accuracy_score(labels, predictions, sample_weight=sample_weight)\n",
+    "print(f'In sample weighted accuracy score: {weighted_accuracy_score:.4f}')\n",
+    "\n",
+    "# Get weighted f1 score\n",
+    "f1_score = metrics.f1_score(labels, predictions, average='micro', sample_weight=sample_weight)\n",
+    "print(f'In sample weighted f1 score: {f1_score:.4f}')"
+   ]
   }
  ],
  "metadata": {
