--- a/AI Component/Predict_Method_1.ipynb
+++ b/AI Component/Predict_Method_1.ipynb
@@ -2,54 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up\n",
-    "import sys\n",
+    "# Load necessary libraries\n",
+    "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.nn import functional as F\n",
-    "from transformers import ViTFeatureExtractor, ViTForImageClassification\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "sys.path.append('..')\n",
-    "\n",
+    "# Load project paths\n",
     "dataset_path = '../Datasets/CIFAR10'\n",
     "img_path = dataset_path + '/images'\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set data owner id of interest\n",
-    "data_owner_id = 'A'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "# Set a fixed random seed\n",
     "from core.ai.utils import seed_everything\n",
     "seed_everything()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set data owner id of interest\n",
+    "data_owner_id = 'A'\n",
+    "data_owner_model_name = './saved_models/model_A_1.pt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Dataset Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,22 +100,63 @@
    ],
    "source": [
     "import torch\n",
-    "model = torch.load('./saved_models/model_A_1.pt')\n",
+    "model = torch.load(data_owner_model_name)\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 422/422 [10:50<00:00,  1.54s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# Get predictions\n",
-    "model.eval()\n",
-    "predictions = []\n",
-    "for batch_images, batch_labels in tqdm(data_loader):\n",
-    "    logits = model(batch_images.to(device))\n",
-    "    predictions += logits.argmax(1).cpu().tolist()\n"
+    "def predict(data_loader, model, device='cpu'):\n",
+    "    model.eval()\n",
+    "    predictions = []\n",
+    "    for batch_images, _ in tqdm(data_loader):\n",
+    "        logits = model(batch_images.to(device))\n",
+    "        predictions += logits.argmax(1).cpu().tolist()\n",
+    "    \n",
+    "    return predictions\n",
+    "\n",
+    "predictions = predict(data_loader, model, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In sample accuracy score: 0.9802\n",
+      "In sample f1 score: 0.9802\n",
+      "In sample weighted accuracy score: 0.9780\n",
+      "In sample weighted f1 score: 0.9802\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get and print evaluation metrics\n",
+    "from core.ai.utils import get_metrics\n",
+    "accuracy_score, f1_score, weighted_accuracy_score, weighted_f1_score = get_metrics(\n",
+    "    labels, predictions, label2id)\n",
+    "\n",
+    "print(f'In sample accuracy score: {accuracy_score:.4f}')\n",
+    "print(f'In sample f1 score: {f1_score:.4f}')\n",
+    "print(f'In sample weighted accuracy score: {weighted_accuracy_score:.4f}')\n",
+    "print(f'In sample weighted f1 score: {weighted_f1_score:.4f}')\n"
    ]
   },
   {
@@ -124,140 +164,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn import metrics\n",
-    "# Get accuracy\n",
-    "accuracy_score = metrics.accuracy_score(labels, predictions)\n",
-    "print(f'In sample accuracy score: {accuracy_score:.4f}')\n",
-    "\n",
-    "# Get f1 score\n",
-    "f1_score = metrics.f1_score(labels, predictions, average='micro')\n",
-    "print(f'In sample f1 score: {f1_score:.4f}')\n"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In sample weighted accuracy score: 0.978\n",
-      "In sample weighted f1 score: 0.978\n"
-     ]
-    }
-   ],
    "source": [
-    "# Get weighted accuracy\n",
-    "sample_weight = [5 if label==label2id['other'] else 1 for label in labels]\n",
-    "weighted_accuracy_score = metrics.accuracy_score(labels, predictions, sample_weight=sample_weight)\n",
-    "print(f'In sample weighted accuracy score: {weighted_accuracy_score:.4f}')\n",
-    "\n",
-    "# Get weighted f1 score\n",
-    "f1_score = metrics.f1_score(labels, predictions, average='micro', sample_weight=sample_weight)\n",
-    "print(f'In sample weighted f1 score: {f1_score:.4f}')"
+    "## Test Dataset Evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get test dataset from a random seed\n",
     "SEED = 20\n",
     "np.random.seed(SEED)\n",
     "data_df = pd.read_csv(dataset_path + '/data.csv')\n",
-    "test_dataset = data_df.groupby('label').sample(frac=.2).query('image != \"51101.png\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_dataset\n",
+    "test_dataset = data_df.groupby('label') .sample(frac=.2) \\\n",
+    "    .query('image != \"51101.png\"') # 51101.png has a loading problem\n",
+    "\n",
     "other_index = test_dataset.query('label_name not in @label2id.keys()').index\n",
-    "test_dataset.loc[other_index, 'label_name'] = 'other'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_dataset.loc[other_index, 'label_name'] = 'other'\n",
+    "\n",
+    "# Get test dataset images and labels\n",
     "images = [f'{img_path}/{image}' for image in test_dataset.image]\n",
-    "labels = test_dataset.label_name.apply(lambda x: label2id[x]).tolist()"
+    "labels = test_dataset.label_name.apply(lambda x: label2id[x]).tolist()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval_data_loader = get_loader(images, labels, vit_feature_extractor, eval_transform,\n",
-    "                         pre_trained_model=vit_model, device=device, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 375/375 [09:30<00:00,  1.52s/it]\n"
+      "100%|██████████| 375/375 [09:44<00:00,  1.56s/it]\n"
      ]
     }
    ],
    "source": [
-    "# Get out sample dataset predictions\n",
-    "model.eval()\n",
-    "predictions = []\n",
-    "for batch_images, batch_labels in tqdm(eval_data_loader):\n",
-    "    logits = model(batch_images.to(device))\n",
-    "    predictions += logits.argmax(1).cpu().tolist()\n"
+    "# Get test dataset data loader\n",
+    "eval_data_loader = get_loader(images, labels, vit_feature_extractor, eval_transform,\n",
+    "                         pre_trained_model=vit_model, device=device, shuffle=False)\n",
+    "predictions = predict(eval_data_loader, model, device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In sample accuracy score: 0.8002\n",
-      "In sample f1 score: 0.8002\n",
-      "In sample weighted accuracy score: 0.6888\n",
-      "In sample weighted f1 score: 0.6888\n"
+      "Out sample accuracy score: 0.8002\n",
+      "Out sample f1 score: 0.8002\n",
+      "Out sample weighted accuracy score: 0.6888\n",
+      "Out sample weighted f1 score: 0.6888\n"
      ]
     }
    ],
    "source": [
-    "# Get accuracy\n",
-    "accuracy_score = metrics.accuracy_score(labels, predictions)\n",
-    "print(f'In sample accuracy score: {accuracy_score:.4f}')\n",
+    "# Get and print evaluation metrics\n",
+    "from core.ai.utils import get_metrics\n",
+    "accuracy_score, f1_score, weighted_accuracy_score, weighted_f1_score = get_metrics(\n",
+    "    labels, predictions, label2id)\n",
     "\n",
-    "# Get f1 score\n",
-    "f1_score = metrics.f1_score(labels, predictions, average='micro')\n",
-    "print(f'In sample f1 score: {f1_score:.4f}')\n",
-    "\n",
-    "# Get weighted accuracy\n",
-    "sample_weight = [5 if label==label2id['other'] else 1 for label in labels]\n",
-    "weighted_accuracy_score = metrics.accuracy_score(labels, predictions, sample_weight=sample_weight)\n",
-    "print(f'In sample weighted accuracy score: {weighted_accuracy_score:.4f}')\n",
-    "\n",
-    "# Get weighted f1 score\n",
-    "f1_score = metrics.f1_score(labels, predictions, average='micro', sample_weight=sample_weight)\n",
-    "print(f'In sample weighted f1 score: {f1_score:.4f}')"
+    "print(f'Out sample accuracy score: {accuracy_score:.4f}')\n",
+    "print(f'Out sample f1 score: {f1_score:.4f}')\n",
+    "print(f'Out sample weighted accuracy score: {weighted_accuracy_score:.4f}')\n",
+    "print(f'Out sample weighted f1 score: {weighted_f1_score:.4f}')\n"
    ]
   }
  ],
