Finished train (method 1) and evaluate (method 1)

--- a/AI Component/Method_1_Prediction_and_Evaluation.ipynb
+++ b/AI Component/Method_1_Prediction_and_Evaluation.ipynb
@@ -241,6 +241,123 @@
     "print(f'Out sample weighted accuracy score: {weighted_accuracy_score:.4f}')\n",
     "print(f'Out sample weighted f1 score: {weighted_f1_score:.4f}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Client Dataset Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'core'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19776/2747212215.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mclinet_id\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'X'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mcore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mai\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlabel_enc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Load data owner dataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'core'"
+     ]
+    }
+   ],
+   "source": [
+    "# Set clinet id of interest\n",
+    "clinet_id = 'X'\n",
+    "\n",
+    "from core.ai.utils import label_enc\n",
+    "\n",
+    "# Load data owner dataset\n",
+    "clinet_dataset = pd.read_excel(dataset_path + '/CIFAR10dataOwnerInfo.xlsx', sheet_name=clinet_id)\n",
+    "clinet_dataset.image = [f'{img_path}/{image}' for image in clinet_dataset.image]\n",
+    "num_classes = clinet_dataset.label_name.nunique()\n",
+    "images, labels, label2id, id2label = label_enc(clinet_dataset)\n",
+    "\n",
+    "# Create data owner's model \n",
+    "from core.ai.model import get_vit_model\n",
+    "vit_feature_extractor, vit_model = get_vit_model(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from core.ai.dataset import get_loader\n",
+    "import albumentations as A\n",
+    "eval_transform = A.Compose([\n",
+    "    A.Resize(224, 224)\n",
+    "])\n",
+    "data_loader = get_loader(images, labels, vit_feature_extractor, eval_transform,\n",
+    "                         pre_trained_model=vit_model, device=device, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set data owner id of interest\n",
+    "data_owner_id = 'A'\n",
+    "data_owner_model_name = './saved_models/model_A_1.pt'\n",
+    "\n",
+    "# Load data owner model\n",
+    "import torch\n",
+    "model = torch.load(data_owner_model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\wangk\\anaconda3\\lib\\site-packages\\torch\\nn\\modules\\lazy.py:178: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
+      "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): LazyBatchNorm1d(0, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (1): LazyLinear(in_features=0, out_features=128, bias=True)\n",
+       "  (2): GELU()\n",
+       "  (3): LazyLinear(in_features=0, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "modules = \"LazyBatchNorm1d() | LazyLinear(128) | GELU()\"\n",
+    "modules = modules.replace(' ', '').split('|')\n",
+    "modules = [eval(f'nn.{layer}') for layer in modules]\n",
+    "modules += [nn.LazyLinear(2)]\n",
+    "nn.Sequential(*modules)\n",
+    "# [nn.LazyBatchNorm1d(0, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True), LazyLinear(in_features=0, out_features=128, bias=True), GELU()]"
+   ]
   }
  ],
  "metadata": {
