--- a/AI Component/Dataset_Preparation.ipynb
+++ b/AI Component/Dataset_Preparation.ipynb
@@ -362,7 +362,7 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.10.6 64-bit",
+      "display_name": "Python 3.9.7 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -376,11 +376,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.9.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+        "hash": "511e198c7044f4fa1c9fb6786af37bc0803f028a2364c2b1dc987f96133f7904"
       }
     }
   },
