--- a/Federated Learning/Tutorial 4 - Encrypted Convolution on MNIST.ipynb
+++ b/Federated Learning/Tutorial 4 - Encrypted Convolution on MNIST.ipynb
@@ -179,10 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7.0-beta.60\n"
+     ]
+    }
+   ],
+   "source": [
+    "import syft as sy\n",
+    "print(sy.__version__)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,30 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Loss: 0.080990\n",
-      "\n",
-      "Test Accuracy of 0: 98% (968/980)\n",
-      "Test Accuracy of 1: 99% (1129/1135)\n",
-      "Test Accuracy of 2: 98% (1015/1032)\n",
-      "Test Accuracy of 3: 98% (998/1010)\n",
-      "Test Accuracy of 4: 98% (970/982)\n",
-      "Test Accuracy of 5: 98% (881/892)\n",
-      "Test Accuracy of 6: 98% (942/958)\n",
-      "Test Accuracy of 7: 98% (1013/1028)\n",
-      "Test Accuracy of 8: 97% (951/974)\n",
-      "Test Accuracy of 9: 95% (966/1009)\n",
-      "\n",
-      "Test Accuracy (Overall): 98% (9833/10000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test(model, test_loader, criterion):\n",
     "    # initialize lists to monitor test loss and accuracy\n",
@@ -429,7 +419,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enc_model = EncConvNet(model)\n"
+    "enc_model = EncConvNet(model)\n",
+    "for i, j in test_loader:\n",
+    "    print(i,j)"
    ]
   },
   {
