--- a/core/fl/Untitled.ipynb
+++ b/core/fl/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "bee5eb33",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import torch\n",
     "import random\n",
     "import numpy as np\n",
-    "import jason"
+    "import json\n",
+    "import torch.nn as nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "id": "fb8fc703",
    "metadata": {},
    "outputs": [],
@@ -26,7 +27,10 @@
     "    data = json.load(x)\n",
     "    model_structure = data['model_structure']\n",
     "    model_parameters_names = data['model_parameters_names']\n",
-    "    model_parameters_vals = data['model_parameters_vals']\n",
+    "    model_parameters_vals_ = data['model_parameters_vals']\n",
+    "    model_parameters_vals=[]\n",
+    "    for i in model_parameters_vals:\n",
+    "        model_parameters_vals.append(list(map(lambda x: x + random.randint(-10,10)*0.000001, i)))\n",
     "    model_parameters_names = [f'[{name.split(\".\")[0]}].{name.split(\".\")[1]}'\n",
     "                                   for name in model_parameters_names.split('|')]\n",
     "    received_model = nn.Sequential(\n",
@@ -34,31 +38,109 @@
     "    )\n",
     "    for parameters_name, parameters_val in zip(model_parameters_names, model_parameters_vals):\n",
     "        exec(f'received_model{parameters_name} = nn.Parameter(torch.tensor(parameters_val))')\n",
-    "    return received_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "6d04c147",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loadmodels(name):\n",
-    "    all=[]\n",
-    "    for i in name:\n",
-    "        all.append(loadmodel(i))\n",
-    "    return all\n"
+    "    for param in received_model.parameters():\n",
+    "        param.requires_grad = False\n",
+    "    print()\n",
+    "    return received_model.to('cuda')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8266282",
+   "id": "1fbfba50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = dataset_path + '/images'"
+    "torch.load('saved_models/model_A')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6d04c147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loadmodels(names):\n",
+    "    all=[]\n",
+    "    for i in names:\n",
+    "        all.append(loadmodel(i))\n",
+    "    return all[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "97dddbc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from predict import predict_from_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c57b22a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path = '../../Datasets/CIFAR10'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ec7cf9e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ensemble(models,path,device):\n",
+    "    for i in models:\n",
+    "        predict_from_dataset(path,'A',\"sb\",\"sb\",models,device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9ee752b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def final(path):\n",
+    "    models= loadmodels([\"model_A\"])\n",
+    "    y= ensemble(models,dataset_path,'cuda')\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fb2ee83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<torch.utils.data.dataloader.DataLoader object at 0x000001BF67A5A850> Sequential(\n",
+      "  (0): BatchNorm1d(768, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (1): Linear(in_features=768, out_features=128, bias=True)\n",
+      "  (2): GELU()\n",
+      "  (3): Linear(in_features=128, out_features=6, bias=True)\n",
+      ")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 255/422 [04:59<03:15,  1.17s/it]"
+     ]
+    }
+   ],
+   "source": [
+    " final(dataset_path)"
    ]
   }
  ],
