--- a/core/fl/Untitled.ipynb
+++ b/core/fl/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "bee5eb33",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import random\n",
     "import numpy as np\n",
     "import json\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "from predict import predict_from_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "fb8fc703",
    "metadata": {},
    "outputs": [],
@@ -27,10 +28,13 @@
     "    data = json.load(x)\n",
     "    model_structure = data['model_structure']\n",
     "    model_parameters_names = data['model_parameters_names']\n",
-    "    model_parameters_vals_ = data['model_parameters_vals']\n",
-    "    model_parameters_vals=[]\n",
-    "    for i in model_parameters_vals:\n",
-    "        model_parameters_vals.append(list(map(lambda x: x + random.randint(-10,10)*0.000001, i)))\n",
+    "    model_parameters_vals_= data['model_parameters_vals']\n",
+    "    model_parameters_vals =[]\n",
+    "    for i in model_parameters_vals_:\n",
+    "        tmp=torch.tensor(i)\n",
+    "        tmp2=torch.rand(tmp.shape)*0.0000001\n",
+    "        tmp3=torch.add(tmp,tmp2)\n",
+    "        model_parameters_vals.append(tmp3.tolist())\n",
     "    model_parameters_names = [f'[{name.split(\".\")[0]}].{name.split(\".\")[1]}'\n",
     "                                   for name in model_parameters_names.split('|')]\n",
     "    received_model = nn.Sequential(\n",
@@ -40,23 +44,65 @@
     "        exec(f'received_model{parameters_name} = nn.Parameter(torch.tensor(parameters_val))')\n",
     "    for param in received_model.parameters():\n",
     "        param.requires_grad = False\n",
-    "    print()\n",
     "    return received_model.to('cuda')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1fbfba50",
+   "execution_count": 92,
+   "id": "b791d9df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model_A\n",
+      "Success! Two models have the same output\n",
+      "model_B\n",
+      "Success! Two models have the same output\n",
+      "model_C\n",
+      "Success! Two models have the same output\n",
+      "model_D\n",
+      "Success! Two models have the same output\n",
+      "model_E\n",
+      "Success! Two models have the same output\n",
+      "model_F\n",
+      "Success! Two models have the same output\n",
+      "model_G\n",
+      "Success! Two models have the same output\n",
+      "model_T1\n",
+      "Success! Two models have the same output\n",
+      "model_T2\n",
+      "Success! Two models have the same output\n",
+      "model_T3\n",
+      "Success! Two models have the same output\n"
+     ]
+    }
+   ],
    "source": [
-    "torch.load('saved_models/model_A')\n"
+    "\n",
+    "def checksame():\n",
+    "    hh=['model_A','model_B','model_C','model_D','model_E','model_F','model_G','model_T1','model_T2','model_T3']\n",
+    "    for i in hh:\n",
+    "        y=torch.load('../../saved_models/'+ i+'.pt').to('cuda')\n",
+    "        x=loadmodel(i)\n",
+    "        random_input = torch.randn(32, 768).to('cuda')\n",
+    "        x.eval()\n",
+    "        x_ = x(random_input)\n",
+    "        y.eval()\n",
+    "        y_= y(random_input)\n",
+    "        print(i)\n",
+    "        if (x_ == y_).all():\n",
+    "            print('Success! Two models have the same output')\n",
+    "        else:\n",
+    "            print('Fail! Please check if any of the parameters are different')\n",
+    "checksame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "6d04c147",
    "metadata": {},
    "outputs": [],
@@ -65,22 +111,12 @@
     "    all=[]\n",
     "    for i in names:\n",
     "        all.append(loadmodel(i))\n",
-    "    return all[0]\n"
+    "    return all\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "97dddbc9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from predict import predict_from_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "c57b22a8",
    "metadata": {},
    "outputs": [],
@@ -90,19 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "ec7cf9e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ensemble(models,path,device):\n",
     "    for i in models:\n",
-    "        predict_from_dataset(path,'A',\"sb\",\"sb\",models,device)"
+    "        \n",
+    "        predict_from_dataset(path,'X',\"sb\",\"sb\",i,device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "9ee752b5",
    "metadata": {},
    "outputs": [],
@@ -115,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "8fb2ee83",
    "metadata": {},
    "outputs": [
@@ -123,25 +160,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<torch.utils.data.dataloader.DataLoader object at 0x000001BF67A5A850> Sequential(\n",
+      "<torch.utils.data.dataloader.DataLoader object at 0x00000187EE2858B0> Sequential(\n",
       "  (0): BatchNorm1d(768, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "  (1): Linear(in_features=768, out_features=128, bias=True)\n",
       "  (2): GELU()\n",
       "  (3): Linear(in_features=128, out_features=6, bias=True)\n",
-      ")\n"
+      ") CNM\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 255/422 [04:59<03:15,  1.17s/it]"
+      "100%|██████████| 57/57 [00:55<00:00,  1.03it/s]\n"
      ]
     }
    ],
    "source": [
-    " final(dataset_path)"
+    "final(dataset_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb0db398",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
